# planagent

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_group_last_context_token.py  0003_bot_sessions.py  (+4 more)
backend/tests/: conftest.py  test_agent_cancel_vs_vent_real.py  test_agent_conversation_split.py  test_agent_does_not_ask_user_id_real.py  test_agent_no_kinship_nicknames_real.py  test_agent_no_reasoning_leak_real.py  test_agent_orchestrator_real.py  test_agent_prefers_schedule_message_real.py  test_agent_prompt_cache.py  test_agent_tools.py  test_alembic_cli.py  test_api_groups.py  test_api_plans.py  test_bot_session_migration.py  test_bridge_bootstrap_group_members.py  test_bridge_smoke_real.py  test_cron_normalization.py  test_cross_user_note_real.py  test_deepseek_real.py  test_friendly_time.py  test_health_check_subcommand.py  test_inbound_dedup.py  test_list_plans_compact_shape.py  test_merged_single_send_real.py  test_migration_last_context_token.py  test_multi_session_runtime.py  test_peek_peer_state_real.py  test_pending_outbound_delivery_real.py  test_pending_outbound_label.py  test_plan_cancel_tool.py  test_plan_lifecycle_overdue_sweep.py  test_reminder_routing_owner_only.py  test_schedule_message_to_peer_tool.py  test_scheduler_decider_real.py  test_scheduler_tick_real.py  test_sessions_loader.py  test_start_at_reminder_auto_scheduled_real.py  test_structured_logging.py  test_thinking_disabled_passes_through.py  test_wakeup_decider_real.py  (+5 more)
(+65 files in other folders)
