[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planagent"
version = "0.1.0"
description = "LLM-native plan manager with WeChat group integration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "openai>=1.55",
  "apscheduler>=3.10",
  "tenacity>=9.0",
  "qrcode>=7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.33",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/planagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
extend-ignore = ["B008"]  # FastAPI uses Depends(...) / Query(...) in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "real_api: hits the live DeepSeek API (requires DEEPSEEK_API_KEY)",
  "real_wechat: hits the live WeChat ClawBot API (requires WECHAT_BOT_TOKEN)",
]
